# ReSet-Plugins

./: .gitignore  PKGBUILD_KEYBOARD  README.md  \  flake.nix  shell.nix
.direnv/: flake-profile  flake-profile-1-link  flake-profile-2-link  flake-profile-23-link  flake-profile-24-link  flake-profile-25-link  flake-profile-3-link  flake-profile-4-link
.github/: release-arch.yml  rust.yml
.github/workflows/: release-arch.yml  release.yml  rust.yml
keyboard_plugin/: Cargo.toml  PKGBUILD  README.md
keyboard_plugin/debian/DEBIAN/: control  postinst
keyboard_plugin/src/: const.rs  keyboard_layout.rs  lib.rs  tests.rs  utils.rs
keyboard_plugin/src/backend/: gnome.rs  hyprland.rs  kde.rs  mod.rs
keyboard_plugin/src/frontend/: add_layout_page.rs  main_page.rs  mod.rs
monitor_deb/DEBIAN/: control
monitors/: 2  ;  Cargo.toml  PKGBUILD  README.md  build.rs
monitors/debian/DEBIAN/: control  postinst
monitors/src/: const.rs  lib.rs  tests.rs  utils.rs
monitors/src/backend/: general.rs  gnome.rs  hyprland.rs  kde.rs  kde2.rs  kwin.rs  mod.rs  utils.rs  wlr.rs  x11.rs
monitors/src/frontend/: general.rs  gnome.rs  handlers.rs  hyprland.rs  mod.rs
monitors/src/resources/style/: style.css
nix/: keyboard.nix  monitor.nix
