[package]
name = "reset-keyboard-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
re_set-lib = { git = "https://github.com/Xetibo/ReSet-Lib" }
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
dbus = "0.9.7"
glib = "0.19.4"
gdk4 = "0.8.1"
xkbregistry = "0.1.1"
dbus-crossroads = "0.5.2"
directories-next = "2.0.0"
toml = "0.8.12"
dconf_rs = "0.3.0"
regex = "1.10.4"